# 2024SummerCamp

./: 09-非常五加一-气象数据.doc  readme.md  ~$实训项目简介.docx  暑期实训项目简介.docx  需求文档.docx  非常五加一“气象数据模拟分析系统”团队管理制度.txt  项目进度.docx
Sprint阶段总结PPT/: sprint1阶段总结.pptx
demo4/: demo4.pro  main.cpp
release/: 应用系统开发-用户手册.docx
release/release_linux_beta1/: release_linux_beta
release/release_linux_v1.0/haolingqixiang/: Dockerfile  admin.cpp  admin.h  api.h  database.cpp  database.h  lifeindexwidget.h  login_register.cpp  pic.qrc  regis.cpp  todayweather.cpp  todayweather.h
release/release_windows_v1.0/: libmysql.lib
sprint文档/: Sprint1待办列表.xls
团队相关介绍/: 团队创建报告.md  非常五加一“气象数据模拟分析系统”团队管理制度.md
敏捷模式开发文档模板/: 应用系统开发-测试文档示例.docx  应用系统开发-用户手册.docx  应用系统开发-系统项目计划.docx  应用系统开发-设计文档.docx  应用系统开发-需求文档示例.docx  应用系统开发=应用程序部署文档.docx  游戏项目开发的过程和步骤.docx  游戏项目设计文档要求.docx
数据/: data.sql
用户需求文档/: 用户故事.md  用户需求设计.docx
项目介绍及目标/: 总体任务实现.md  暑期实训项目简介.md  项目进度.docx
项目代码区/: Untitled.ipynb
项目代码区/flask/: AnalogData.py  DataAnalyse.py  DeepLearning.py  GetData.py  SARIMA.py  app.py  config.py  dockerfile  requirements.txt
项目代码区/flask部分/demo-qt/: CMakeLists.txt  main.cpp
项目代码区/haolingqixiang_11_2/: admin.cpp  login_register.cpp  main.cpp  sectionwidget.cpp  tst_log.cpp  tst_t1.cpp
项目代码区/python部分(zjy)/: AnalogData.py  DataAnalyse.py  GetData.py  MachineLearning.py  SARIMA.py  config.py  fake.py  main.py  readme.md  try.py  使用sarima模型预测天气实验流程.docx
项目代码区/气象算法：测试1/: Untitled.ipynb
项目其他文档/: Devops结项报告.docx  应用系统开发-测试文档示例.docx  应用系统开发-系统项目计划.docx  应用系统开发-设计文档.docx  应用系统开发=应用程序部署文档.docx
(+248 files in other folders)
